--- a/TechBrailzersGemini.ipynb
+++ b/TechBrailzersGemini.ipynb
@@ -317,7 +317,7 @@
       "metadata": {
         "id": "pLRhTt6Hpu4k"
       },
-      "execution_count": 17,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -353,376 +353,67 @@
         "    \"parts\": {\n",
         "      \"text\": user_input,\n",
         "    }\n",
-        "  }\n"
+        "  }\n",
+        "\n",
+        "\n",
+        "def build_next_llm_response(json_data):\n",
+        "  return requests.post(\n",
+        "      url,\n",
+        "      headers=headers,\n",
+        "      json=json_data,\n",
+        "  )"
       ],
       "metadata": {
         "id": "V4jxNKCznQSR"
       },
-      "execution_count": 48,
+      "execution_count": 71,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "response = requests.post(\n",
-        "    url,\n",
-        "    headers=headers,\n",
-        "    json=get_initial_data()\n",
+        "data = get_initial_data()\n",
+        "def build_message_data(next_piece):\n",
+        "  data[\"contents\"].append(next_piece)\n",
+        "\n",
+        "  return data\n",
+        "\n",
+        "response = build_next_llm_response(\n",
+        "    data,\n",
         ")\n",
         "\n",
+        "\n",
         "while True:\n",
+        "  llm_response = get_llm_response(response)\n",
+        "  build_message_data(\n",
+        "      llm_response\n",
+        "  )\n",
+        "  pretty_print_conversation(\n",
+        "      response.json()\n",
+        "  )\n",
+        "  user_input: str | bool = get_user_input()\n",
+        "  if not user_input:\n",
+        "    break\n",
+        "\n",
+        "  build_message_data(\n",
+        "      user_input\n",
+        "  )\n",
+        "\n",
+        "  response = build_next_llm_response(\n",
+        "      data\n",
+        "  )\n",
+        "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "O6Uisx1LnclE"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "\n",
-        "response = requests.post(url, headers=headers, json=data)\n",
-        "\n",
-        "\n",
-        "response.json()\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "EU1uHsBJf9GC",
-        "outputId": "c1e20428-fd3f-428d-aac2-45041df9557d"
-      },
-      "execution_count": 18,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'candidates': [{'content': {'role': 'model',\n",
-              "    'parts': [{'text': 'Hello, which language do you prefer to speak, English or Swahili?\\nHabari, ungependa kuzungumza lugha gani, Kiingereza au Kiswahili? \\n'}]},\n",
-              "   'finishReason': 'STOP',\n",
-              "   'safetyRatings': [{'category': 'HARM_CATEGORY_HATE_SPEECH',\n",
-              "     'probability': 'NEGLIGIBLE',\n",
-              "     'probabilityScore': 0.14330755,\n",
-              "     'severity': 'HARM_SEVERITY_NEGLIGIBLE',\n",
-              "     'severityScore': 0.122418255},\n",
-              "    {'category': 'HARM_CATEGORY_DANGEROUS_CONTENT',\n",
-              "     'probability': 'NEGLIGIBLE',\n",
-              "     'probabilityScore': 0.019531239,\n",
-              "     'severity': 'HARM_SEVERITY_NEGLIGIBLE',\n",
-              "     'severityScore': 0.04594821},\n",
-              "    {'category': 'HARM_CATEGORY_HARASSMENT',\n",
-              "     'probability': 'NEGLIGIBLE',\n",
-              "     'probabilityScore': 0.26095408,\n",
-              "     'severity': 'HARM_SEVERITY_NEGLIGIBLE',\n",
-              "     'severityScore': 0.13386749},\n",
-              "    {'category': 'HARM_CATEGORY_SEXUALLY_EXPLICIT',\n",
-              "     'probability': 'NEGLIGIBLE',\n",
-              "     'probabilityScore': 0.0894546,\n",
-              "     'severity': 'HARM_SEVERITY_NEGLIGIBLE',\n",
-              "     'severityScore': 0.02428387}]}],\n",
-              " 'usageMetadata': {'promptTokenCount': 1053,\n",
-              "  'candidatesTokenCount': 40,\n",
-              "  'totalTokenCount': 1093}}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 18
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "LST-PID4kTJE"
-      },
-      "execution_count": 47,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "KM42Mp63mJPW"
-      },
-      "execution_count": 40,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "get_user_input(\n",
-        "\n",
-        ")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "hm37aQOemViY",
-        "outputId": "17d9d3ce-942a-4e91-9a56-bc850c989c1b"
-      },
-      "execution_count": 41,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "You: Naitwa Noordin\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'role': 'user', 'parts': {'text': 'Naitwa Noordin'}}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 41
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "data = {\n",
-        "  \"contents\": [\n",
-        "    {\n",
-        "    \"role\": \"user\",\n",
-        "    \"parts\": {\n",
-        "      \"text\": \"cow\",\n",
-        "    },\n",
-        "  },\n",
-        "  llm_response,\n",
-        "  get_user_input(),\n",
-        "  ],\n",
-        "}\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "bajI1Y2dj3jK",
-        "outputId": "860eb791-7e99-4f32-dea5-30b43d12fdde"
-      },
-      "execution_count": 42,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "You: Naitwa Noordin\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "response_2 = requests.post(url, headers=headers, json=data)\n",
-        "response_2.json()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "a5BomCG7kojE",
-        "outputId": "8f76c427-9dad-4aad-e907-20950e3ab098"
-      },
-      "execution_count": 43,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{'candidates': [{'content': {'role': 'model',\n",
-              "    'parts': [{'text': 'Habari Noordin, umependelea kuzungumza Kiswahili. Unataka kuzungumzia nini leo?\\n'}]},\n",
-              "   'finishReason': 'STOP',\n",
-              "   'safetyRatings': [{'category': 'HARM_CATEGORY_HATE_SPEECH',\n",
-              "     'probability': 'NEGLIGIBLE',\n",
-              "     'probabilityScore': 0.18097353,\n",
-              "     'severity': 'HARM_SEVERITY_NEGLIGIBLE',\n",
-              "     'severityScore': 0.1261379},\n",
-              "    {'category': 'HARM_CATEGORY_DANGEROUS_CONTENT',\n",
-              "     'probability': 'NEGLIGIBLE',\n",
-              "     'probabilityScore': 0.035745807,\n",
-              "     'severity': 'HARM_SEVERITY_NEGLIGIBLE',\n",
-              "     'severityScore': 0.051177494},\n",
-              "    {'category': 'HARM_CATEGORY_HARASSMENT',\n",
-              "     'probability': 'NEGLIGIBLE',\n",
-              "     'probabilityScore': 0.199308,\n",
-              "     'severity': 'HARM_SEVERITY_NEGLIGIBLE',\n",
-              "     'severityScore': 0.0992954},\n",
-              "    {'category': 'HARM_CATEGORY_SEXUALLY_EXPLICIT',\n",
-              "     'probability': 'NEGLIGIBLE',\n",
-              "     'probabilityScore': 0.08181271,\n",
-              "     'severity': 'HARM_SEVERITY_NEGLIGIBLE',\n",
-              "     'severityScore': 0.044597577}]}],\n",
-              " 'usageMetadata': {'promptTokenCount': 46,\n",
-              "  'candidatesTokenCount': 26,\n",
-              "  'totalTokenCount': 72}}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 43
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "messages_data = {}"
-      ],
-      "metadata": {
-        "id": "JTQA0r52m9mJ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "nBg36iV1nA0m"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "data = {\n",
-        "  \"contents\": [\n",
-        "    {\n",
-        "    \"role\": \"user\",\n",
-        "    \"parts\": {\n",
-        "      \"text\": \"cow\",\n",
-        "    },\n",
-        "  },\n",
-        "  llm_response,\n",
-        "  get_user_input(),\n",
-        "  ],\n",
-        "}"
-      ],
-      "metadata": {
-        "id": "PnjI6NjAmlZ8"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import requests\n",
-        "from google.colab import userdata\n",
-        "from IPython.display import display, HTML\n",
-        "import json\n",
-        "import pprint\n",
-        "\n",
-        "# Function to print conversation in a readable format\n",
-        "def pretty_print_conversation(data):\n",
-        "    role_to_color = {\n",
-        "        \"user\": \"green\",\n",
-        "        \"model\": \"dodgerblue\",\n",
-        "    }\n",
-        "\n",
-        "    for candidate in data['candidates']:\n",
-        "        content = candidate['content']\n",
-        "        role = content['role']\n",
-        "        text_parts = content['parts']\n",
-        "\n",
-        "        for part in text_parts:\n",
-        "            msg = part['text']\n",
-        "\n",
-        "            if isinstance(msg, dict):\n",
-        "                msg = json.dumps(msg, indent=2)\n",
-        "            elif not isinstance(msg, str):\n",
-        "                msg = pprint.pformat(msg)\n",
-        "\n",
-        "            msg = msg.replace(\"\\n\", \"<br>\")\n",
-        "\n",
-        "            display(HTML(f'<font color=\"{role_to_color.get(role, \"black\")}\">{role}: {msg}</font><br>'))\n",
-        "\n",
-        "# Function to get user input\n",
-        "def get_user_input() -> dict:\n",
-        "    user_input = input(\"You: \")\n",
-        "    return {\n",
-        "        \"role\": \"user\",\n",
-        "        \"parts\": [\n",
-        "            {\n",
-        "                \"text\": user_input,\n",
-        "            }\n",
-        "        ]\n",
-        "    }\n",
-        "\n",
-        "# Function to get LLM response content\n",
-        "def get_llm_response(response) -> dict:\n",
-        "    return response.json()['candidates'][0][\"content\"]\n",
-        "\n",
-        "# Set up project and model details\n",
-        "PROJECT_ID = userdata.get('PROJECT_ID')\n",
-        "MODEL_ID = \"gemini-1.5-pro-preview-0409\"\n",
-        "VERTEX_KEY = userdata.get('VERTEX_KEY')\n",
-        "\n",
-        "url = f\"https://us-central1-aiplatform.googleapis.com/v1/projects/{PROJECT_ID}/locations/us-central1/publishers/google/models/{MODEL_ID}:generateContent\"\n",
-        "headers = {\n",
-        "    \"Authorization\": f\"Bearer {VERTEX_KEY}\",\n",
-        "    \"Content-Type\": \"application/json\"\n",
-        "}\n",
-        "\n",
-        "# Initial instructions or context for the LLM\n",
-        "instructions = \"Your initial instructions or context here.\"\n",
-        "\n",
-        "# Start the conversation\n",
-        "conversation_data = [\n",
-        "    {\n",
-        "        \"role\": \"user\",\n",
-        "        \"parts\": [\n",
-        "            {\n",
-        "                \"text\": instructions\n",
-        "            }\n",
-        "        ]\n",
-        "    }\n",
-        "]\n",
-        "\n",
-        "# Function to interact with the LLM\n",
-        "def interact_with_llm(conversation_data):\n",
-        "    data = {\n",
-        "        \"contents\": conversation_data\n",
-        "    }\n",
-        "    response = requests.post(url, headers=headers, json=data)\n",
-        "    return response\n",
-        "\n",
-        "# Display initial conversation\n",
-        "response = interact_with_llm(conversation_data)\n",
-        "pretty_print_conversation(response.json())\n",
-        "\n",
-        "# Main loop for continuous interaction\n",
-        "while True:\n",
-        "    user_message = get_user_input()\n",
-        "    conversation_data.append(user_message)\n",
-        "\n",
-        "    response = interact_with_llm(conversation_data)\n",
-        "    pretty_print_conversation(response.json())\n",
-        "\n",
-        "    llm_response = get_llm_response(response)\n",
-        "    conversation_data.append(llm_response)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 393
+          "height": 279
         },
-        "id": "7Cr9HaFLnFiA",
-        "outputId": "51495772-b15d-4c9e-9b05-cb84c289d2b0"
+        "id": "O6Uisx1LnclE",
+        "outputId": "cb55b607-9d45-4776-af60-a4716e1b5ada"
       },
-      "execution_count": 44,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "display_data",
@@ -731,7 +422,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "<font color=\"dodgerblue\">model: I understand. I will respond according to your instructions, and only use information available to me up to November 2023. I am excited to assist you!  Please tell me what you would like me to do. 😊 <br></font><br>"
+              "<font color=\"dodgerblue\">model: Hello, which language do you prefer to speak: English or Swahili? <br><br>Habari, ungependa kuzungumza lugha gani: Kiingereza au Kiswahili? <br></font><br>"
             ]
           },
           "metadata": {}
@@ -740,19 +431,45 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "You: Hey there\n"
+            "You: Kiswahili\n"
           ]
         },
         {
-          "output_type": "error",
-          "ename": "KeyError",
-          "evalue": "'candidates'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-44-bd1f5a0dd7dd>\u001b[0m in \u001b[0;36m<cell line: 86>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     89\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m     \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minteract_with_llm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconversation_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 91\u001b[0;31m     \u001b[0mpretty_print_conversation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     92\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     93\u001b[0m     \u001b[0mllm_response\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_llm_response\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-44-bd1f5a0dd7dd>\u001b[0m in \u001b[0;36mpretty_print_conversation\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m     12\u001b[0m     }\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0mcandidate\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'candidates'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m         \u001b[0mcontent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcandidate\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'content'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0mrole\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcontent\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'role'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyError\u001b[0m: 'candidates'"
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<font color=\"dodgerblue\">model: Sawa, karibu. Mimi ni msaidizi wa Daktari Mwangi. Nitakusaidia kukusanya historia yako ya matibabu kabla ya Daktari kukuona. <br><br>Kwanza, naomba uniambie jina lako kamili tafadhali? <br></font><br>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "You: Noordin Kullow\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<font color=\"dodgerblue\">model: Asante Bwana Noordin. <br><br>Tafadhali unaweza kuniambia una umri gani?<br></font><br>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "You: Miaka 25\n"
           ]
         }
       ]
