--- a/TechBrailzersGemini.ipynb
+++ b/TechBrailzersGemini.ipynb
@@ -408,12 +408,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 279
+          "height": 648
         },
         "id": "O6Uisx1LnclE",
-        "outputId": "cb55b607-9d45-4776-af60-a4716e1b5ada"
+        "outputId": "c71eafb4-b937-408a-efc4-f1be83e32255"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -422,7 +422,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "<font color=\"dodgerblue\">model: Hello, which language do you prefer to speak: English or Swahili? <br><br>Habari, ungependa kuzungumza lugha gani: Kiingereza au Kiswahili? <br></font><br>"
+              "<font color=\"dodgerblue\">model: Hello, which language do you prefer to speak, English or Swahili? <br>Habari, ungependa kuzungumza lugha gani, Kiingereza au Kiswahili? <br></font><br>"
             ]
           },
           "metadata": {}
@@ -441,7 +441,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "<font color=\"dodgerblue\">model: Sawa, karibu. Mimi ni msaidizi wa Daktari Mwangi. Nitakusaidia kukusanya historia yako ya matibabu kabla ya Daktari kukuona. <br><br>Kwanza, naomba uniambie jina lako kamili tafadhali? <br></font><br>"
+              "<font color=\"dodgerblue\">model: Sawa, karibu. Ninaitwa Gemini, msaidizi wa Daktari Mwangi. Nitakusaidia kukusanya historia yako ya matibabu. <br><br>Kwanza, naomba uniambie jina lako kamili na umri wako? <br></font><br>"
             ]
           },
           "metadata": {}
@@ -450,7 +450,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "You: Noordin Kullow\n"
+            "You: Sudi Supi Abdallah\n"
           ]
         },
         {
@@ -460,7 +460,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "<font color=\"dodgerblue\">model: Asante Bwana Noordin. <br><br>Tafadhali unaweza kuniambia una umri gani?<br></font><br>"
+              "<font color=\"dodgerblue\">model: Asante Bi. Abdallah. Na umri wako ni? <br></font><br>"
             ]
           },
           "metadata": {}
@@ -469,8 +469,115 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "You: Miaka 25\n"
+            "You: Mimi ni Bwana, nina umri wa miaka 24\n"
           ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<font color=\"dodgerblue\">model: Samahani sana Bwana Abdallah.  Naweza kupata taarifa zaidi kukuhusu?  Utaifa wako ni upi?  Unaishi wapi na unafanya kazi gani? <br></font><br>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "You: Niko hapa Nairobi\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<font color=\"dodgerblue\">model: Sawa, Bwana Abdallah. Unaishi na kufanya kazi hapa Nairobi. Unaweza kuniambia kuhusu hali yako ya ndoa? Na utaifa wako ni upi?<br></font><br>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "You: Mkenya, niko single\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<font color=\"dodgerblue\">model: Vizuri Bwana Abdallah. Asante kwa taarifa hizo. Leo umekuja hospitali kwa tatizo gani? <br>Naomba unielezee tatizo lako kwa undani, kwa kutumia maneno yako mwenyewe. <br>Je, tatizo hili limekuwepo kwa muda gani? <br></font><br>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "You: Nina umwa na kichwa tangu juzi.\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<font color=\"dodgerblue\">model: Pole sana Bwana Abdallah. Unasema maumivu ya kichwa yalianza juzi?  Je, unaweza kuniambia zaidi kuhusu maumivu haya?  Yanaanza na kuisha vipi?  Yapo sehemu gani hasa ya kichwa?  Kuna kitu kinachoyapunguza au kuyafanya yaongezeke? <br></font><br>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "You: On my frontal lobe \n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<font color=\"dodgerblue\">model: Sawa, maumivu yako yapo katika paji la uso.  Je,  yanaanza na kuisha vipi?  Kuna kitu kinachoyapunguza au kuyafanya yaongezeke?  Je,  umewahi kupata maumivu kama haya hapo awali? <br></font><br>"
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "You: Its going like voo, voo, voo, voo\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<font color=\"dodgerblue\">model: Naelewa, Bwana Abdallah. Maumivu yanakuja kwa mdundo kama \"voo voo voo\". Je, yanaendelea kwa muda wote au yanakuja na kuondoka? Kuna kitu kinachoyapunguza au kuyafanya yaongezeke, kama vile mwanga, sauti, au harakati? <br><br>Je, umewahi kupata maumivu kama haya hapo awali?<br></font><br>"
+            ]
+          },
+          "metadata": {}
         }
       ]
     },
